--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,6 @@
 <footer class="site-footer">
-
+  <div class="footer-logo">
+    <img src="/assets/img/logo-white.svg" alt="Wisnu Hadibrata">
+    <h4>Wisnu Hadibrata</h4>
+  </div>
 </footer>
