--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -511,7 +511,7 @@ html {
 
 .skills-unit h3 {
   font-weight: 500;
-  font-size: 16px;
+  font-size: 14px;
   margin: 0;
   margin-bottom: 5px;
   padding: 0;
@@ -534,6 +534,9 @@ html {
 @media screen and (min-width: 768px) {
   .skills-container {
     max-width: 960px;
+  }
+  .skills-unit h3 {
+    font-size: 16px;
   }
 }
 
