--- a/sass/4-pages/_about.scss
+++ b/sass/4-pages/_about.scss
@@ -325,7 +325,7 @@
 
   h3 {
     font-weight: 500;
-    font-size: 16px;
+    font-size: 14px;
     margin: 0;
     margin-bottom: 5px;
     padding: 0;
@@ -355,5 +355,11 @@
 @include media($pc) {
   .skills-container {
     max-width: 960px;
+  }
+
+  .skills-unit{
+    h3{
+      font-size: 16px;
+    }
   }
 }
