--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <section class="notes">
-  <div class="notes-title">
+  <div class="page-title">
     <h4>{{ page.title }}</h4>
   </div>
 
