--- a/sass/4-pages/_notes.scss
+++ b/sass/4-pages/_notes.scss
@@ -30,5 +30,41 @@
 
   p {
     margin: 0;
+    margin-bottom: 20px;
+  }
+
+  blockquote{
+    position: relative;
+
+    &::before{
+      content: '';
+      @include position(absolute, 0 null 0 -20px);
+      @include size(3px 100%);
+      margin: auto 0;
+      background: $grey;
+    }
+  }
+
+  a{
+    position: relative;
+    color: $favdark;
+    @include transition(all 300ms);
+
+    &::after{
+      content: '';
+      @include position(absolute, null 0 -5px 0);
+      @include size(100% 2px);
+      background: $favdark;
+      margin: 0 auto;
+      z-index: -1;
+    }
+
+    &:hover{
+      color: #fff;
+
+      &::after{
+        height: 25px;
+      }
+    }
   }
 }
