--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -106,6 +106,32 @@ html {
   }
 }
 
+#about a {
+  position: relative;
+  color: #029aa8;
+  transition: all 300ms;
+}
+
+#about a::after {
+  content: '';
+  position: absolute;
+  right: 0;
+  bottom: -5px;
+  left: 0;
+  height: 2px;
+  width: 100%;
+  background: #029aa8;
+  margin: 0 auto;
+}
+
+#about a:hover {
+  color: #A5939F;
+}
+
+#about a:hover::after {
+  opacity: 0.5;
+}
+
 .about {
   position: relative;
   width: 100%;
@@ -471,6 +497,32 @@ html {
   padding-left: 10px;
   margin-left: 10px;
   border-left: 1px solid #41c2cc;
+}
+
+.experience-unit a {
+  position: relative;
+  color: #029aa8;
+  transition: all 300ms;
+}
+
+.experience-unit a::after {
+  content: '';
+  position: absolute;
+  right: 0;
+  bottom: -5px;
+  left: 0;
+  height: 2px;
+  width: 100%;
+  background: #029aa8;
+  margin: 0 auto;
+}
+
+.experience-unit a:hover {
+  color: #A5939F;
+}
+
+.experience-unit a:hover::after {
+  opacity: 0.5;
 }
 
 @media screen and (min-width: 768px) {
