--- a/sass/4-pages/_notes.scss
+++ b/sass/4-pages/_notes.scss
@@ -20,7 +20,12 @@
 
   h5 {
     font-weight: 400;
+    font-size: 14px;
     margin-bottom: 10px;
+
+    span{
+      color: $favdark;
+    }
   }
 
   h4 {
