--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,15 +2,15 @@
     <div class="navigation">
       <a href="/">
         <div class="site-logo">
-          <img src="/assets/img/logo.svg" alt="Wisnu Hadibrata">
+          <img src="assets/img/logo.svg" alt="Wisnu Hadibrata">
           <h4>Wisnu Hadibrata</h4>
         </div>
       </a>
 
       <div class="site-menu">
-        <a href="/about.html" class="site-menu-item">about</a>
-        <a href="/notes.html" class="site-menu-item">notes</a>
-        <a href="/contact.html" class="site-menu-item">contact</a>
+        <a href="about.html" class="site-menu-item">about</a>
+        <a href="notes.html" class="site-menu-item">notes</a>
+        <a href="contact.html" class="site-menu-item">contact</a>
         <div class="menu-close">close</div>
         <div class="menu-icon">
           <span></span>
@@ -22,17 +22,17 @@
 
   <div class="full-navigation">
 
-    <a href="/about.html" class="full-navigation-about">
+    <a href="about.html" class="full-navigation-about">
       <span>// Learn more about me</span>
       <h4>About</h4>
     </a>
 
-    <a href="/notes.html" class="full-navigation-notes">
+    <a href="notes.html" class="full-navigation-notes">
       <span>// My latest notes</span>
       <h4>Notes</h4>
     </a>
 
-    <a href="/contact.html" class="full-navigation-contact">
+    <a href="contact.html" class="full-navigation-contact">
       <span>// Reach me</span>
       <h4>Contact</h4>
     </a>
